# rsx1-hello-vst

./: .gitignore  Cargo.toml  README.md
data/: schala.fxb  schala.mid  schala_inst.fxp
data/projects/schala/: project.yml  schala.mid  schala_inst.fxp  schala_perc.fxp
data/projects/world_revolution/: 00.fxp  01.fxp  02.fxp  03.fxp  04.fxp  05.fxp  06.fxp  07.fxp  08.fxp  09.fxp  10.fxp  11.fxp  12.fxp  project.yml  worldrev.mid
src/: audio_host.rs  cmd_sequence.rs  main.rs  midi_logger.rs  midi_player.rs  sample_host.rs  sample_sequence.rs  schala.rs  timed_event.rs
