[package]
name = "nutrax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
winit = "0.27.5"
cpal = "0.14.2"
vst = "0.3.0"
midly = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
